--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "husky": "7.0.4",
     "lint-staged": "12.1.2",
     "prettier": "2.4.1",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
 }
