--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prettier": "prettier 'src/**/*.ts",
     "prettier:fix": "prettier --write 'src/**/*.ts",
@@ -28,18 +29,23 @@
     ]
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "eslint": "8.3.0",
     "eslint-config-airbnb": "19.0.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "husky": "7.0.4",
     "lint-staged": "12.1.2",
     "prettier": "2.4.1",
     "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2"
   }
 }
