--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@types/morgan": "^1.9.3",
+    "morgan": "^1.10.0"
   }
 }
