--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nyc mocha",
     "prettier": "prettier 'src/**/*.ts",
     "prettier:fix": "prettier --write 'src/**/*.ts",
     "eslint": "eslint 'src/**/*.ts'",
@@ -29,10 +29,13 @@
     ]
   },
   "devDependencies": {
+    "@types/chai": "^4.2.22",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
+    "chai": "^4.3.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "eslint": "8.3.0",
@@ -43,6 +46,8 @@
     "helmet": "^4.6.0",
     "husky": "7.0.4",
     "lint-staged": "12.1.2",
+    "mocha": "^9.1.3",
+    "nyc": "^15.1.0",
     "prettier": "2.4.1",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
