--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
-    "test": "nyc mocha",
+    "test": "nyc mocha -r ts-node/register '__tests__/**/*.ts'",
     "prettier": "prettier 'src/**/*.ts",
     "prettier:fix": "prettier --write 'src/**/*.ts",
     "eslint": "eslint 'src/**/*.ts'",
@@ -33,6 +33,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.0.0",
+    "@types/sinon": "^10.0.6",
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
     "chai": "^4.3.4",
@@ -49,6 +50,7 @@
     "mocha": "^9.1.3",
     "nyc": "^15.1.0",
     "prettier": "2.4.1",
+    "sinon": "^12.0.1",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2"
